--- a/pages/logo.html
+++ b/pages/logo.html
@@ -133,20 +133,20 @@ title: LOGO
 <div class="row">
         <div class="col-12 col-md-4 col-lg-4">
                     <div class="button">
-                        <div><a href="../templates/logo_png.zip" class="btn">Download PNG <i class="fas fa-download"></i></a></div>
+                        <div><a href="../templates/logo_png.zip" download="" class="btn">Download PNG <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
                 </div>
                       </div>
                       <div class="col-12 col-md-4 col-lg-4">
                       <div class="button">
-                        <div><a href="../templates/logo_svg.zip" class="btn">Download SVG <i class="fas fa-download"></i></a></div>
+                        <div><a href="../templates/logo_svg.zip" download="" class="btn">Download SVG <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
                       
                       </div>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4">
                         <div class="button">
-                          <div><a href="../templates/logo_PDF.pdf" class="btn">Download PDF <i class="fas fa-download"></i></a></div>
+                          <div><a href="../templates/logo_PDF.pdf" download="" class="btn">Download PDF <i class="fas fa-download"></i></a></div>
                           <div class="bg"></div>
                         
                         </div>
