--- a/pages/logo.html
+++ b/pages/logo.html
@@ -146,7 +146,7 @@ title: LOGO
                 </div>
                 <div class="col-12 col-md-4 col-lg-4">
                         <div class="button">
-                          <div><a href="/templates/logo_PDF.pdf" download="" class="btn">Download PDF <i class="fas fa-download"></i></a></div>
+                          <div><a href="../templates/sjabloon_folder.zip" class="btn" download="">Download PDF <i class="fas fa-download"></i></a></div>
                           <div class="bg"></div>
                         
                         </div>
