--- a/pages/logo.html
+++ b/pages/logo.html
@@ -140,14 +140,14 @@ title: LOGO
                       </div>
                       <div class="col-12 col-md-4 col-lg-4">
                       <div class="button">
-                        <div><a href="templates/logo_svg.zip" download="" class="btn">Download SVG <i class="fas fa-download"></i></a></div>
+                        <div><a href="../templates/logo_svg.zip" download="" class="btn">Download SVG <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
                       
                       </div>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4">
                         <div class="button">
-                          <div><a href="../templates/sjabloon_folder.zip" class="btn" download="">Download PDF <i class="fas fa-download"></i></a></div>
+                          <div><a href="../templates/logo_PDF.pdf" class="btn" download="">Download PDF <i class="fas fa-download"></i></a></div>
                           <div class="bg"></div>
                         
                         </div>
