--- a/pages/logo.html
+++ b/pages/logo.html
@@ -134,7 +134,7 @@ title: LOGO
 <div class="row">
         <div class="col-12 col-md-4 col-lg-4">
                     <div class="button">
-                        <div><a href="/logo_png.zip" download="" class="btn">Download PNG <i class="fas fa-download"></i></a></div>
+                        <div><a href="/1718-3CMO-BaP-arnevrom/templates/logo_png.zip" download="" class="btn">Download PNG <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
                 </div>
                       </div>
