--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,10 @@ title: Stijlblad - huisstijlgids
 		  <textarea class="form-control " id="exampleFormControlTextarea1" rows="3" placeholder="Stel hier je vraag"></textarea>
 		</div>
 	
-		<button class="btn-sm">Button</button>
+		<div class="button">
+			<div><a href="#" download="" class="btn">Verzenden </a></div>
+			<div class="bg"></div>
+	</div>
 		
 
 	</form>
