--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@ permalink: /
 		
 	
 	<div class="col-12 col-md-12 col-lg-12 center_text text-padding center">
-			<img src="{{ '/images/logo.svg' | relative_url }}" id="banner_image" class="">
+			<img src="{{ '/images/logo_wit.svg' | relative_url }}" id="banner_image" class="">
 		<h1>Huistijlgids</h1>
 		
 		
